--- a/requirements.txt
+++ b/requirements.txt
@@ -71,6 +71,8 @@ db == 0.1.1
 # D:\DeepLearning\predictable-api\resources\subscribers.py: 3
 examplejupyter == 1.0.0
 
+gunicorn == 20.0.4
+
 # D:\DeepLearning\predictable-api\db.py: 14,15
 # D:\DeepLearning\predictable-api\resources\past_prices.py: 3
 # D:\DeepLearning\predictable-api\resources\subscribers.py: 3
